--- a/README
+++ b/README
@@ -3,4 +3,4 @@ Este codigo fue hecho para la clase de Seguridad Informatica 2018 de la Universi
 -Nelson Gonzalez, 151685
 -Arturo Ortiz, 151564
 
-Las indicaciones del codigo se encuentran en la parte de abajo y el reporte fue subido al portafolio de dicho curso.
+Los programas son parte de los proyectos de Seguridad Informatica impartida por Vicente Alarcon.
